VSE Preview doesn't update when snapping Images to playhead with a video overlaid #114999

Closed
opened 2023-11-16 16:05:00 +01:00 by Nick Alberelli · 4 comments

System Information
Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: d0c073898a93

Short description of error
If a video is used as an overlaid ontop of for some image strips, adjustments to those image strips via Shift + S/ the Snap Strips to Current operator are not reflected in the sequencer preview window.

Test Files
vse-freeze-image-overlay-video.zip

Exact steps for others to reproduce the error with example file

  1. Open VSE-Overlay-does-not-update.blend from vse-freeze-image-overlay-video.zip
  2. Set playhead to 30 Frames, select the right handle of the strip on channel 2
  3. Use Shitft + S to snap strip's end to playhead. Video preview doesn't update with this change

(Expected results are: this will reveal the 4:3 Image on channel 1. By setting playhead to frame 130, and repeating steps 1-2, expected results can be demonstrated. Bug isn't present because there is no video overlay on channel 3)

Issue Demo

**System Information** Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: `d0c073898a93` **Short description of error** If a video is used as an overlaid ontop of for some image strips, adjustments to those image strips via `Shift + S`/ the Snap Strips to Current operator are not reflected in the sequencer preview window. **Test Files** [vse-freeze-image-overlay-video.zip](/attachments/9dbb892f-3e56-41ad-93a5-1d363a1e3109) **Exact steps for others to reproduce the error with example file** 1. Open `VSE-Overlay-does-not-update.blend` from [vse-freeze-image-overlay-video.zip](/attachments/9dbb892f-3e56-41ad-93a5-1d363a1e3109) 2. Set playhead to 30 Frames, select the right handle of the strip on channel 2 3. Use `Shitft + S` to snap strip's end to playhead. **Video preview doesn't update with this change** (Expected results are: this will reveal the 4:3 Image on channel 1. By setting playhead to frame 130, and repeating steps 1-2, expected results can be demonstrated. Bug isn't present because there is no video overlay on channel 3) **Issue Demo** <video src="/attachments/d6f00278-fedb-4dd7-8f73-793b1636bdaa" title="2023-11-16 09-43-08.mkv" controls></video>
Nick Alberelli added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 16:05:01 +01:00
Member

strip used as an overlaid ontop of for some image strips, adjustments to below image strips via Shift + S are not reflected in the sequencer preview window.

Hi, I can confirm. Probably a missing redraw/preview update.
cc @iss

> strip used as an overlaid ontop of for some image strips, adjustments to below image strips via Shift + S are not reflected in the sequencer preview window. Hi, I can confirm. Probably a missing redraw/preview update. cc @iss
Pratik Borhade added
Module
VFX & Video
Status
Confirmed
Interest
Video Sequencer
and removed
Status
Needs Triage
labels 2023-11-17 10:49:54 +01:00

Looks like composite cache is not cleared.

Looks like composite cache is not cleared.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-18 04:13:23 +01:00
Member

@iss , can we backport your fix to 3.3, 3.6?

@iss , can we backport your fix to 3.3, 3.6?

@PratikPB2123 this is pretty safe to backport, but IMO nowhere near critical issue

@PratikPB2123 this is pretty safe to backport, but IMO nowhere near critical issue
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114999
No description provided.