Fix #114999: VSE preview doesn't update when snapping handle

Caused by missing cache invalidation.